fixed missalignment of the mouse and selector while clicking on the wheel to select a color

--- a/styles.css
+++ b/styles.css
@@ -30,47 +30,88 @@ div {
     max-width: 600px;
 }
 
-.color-picker-container {
-    padding: 15px;
-    position: relative;
-    aspect-ratio: 1 / 1;
-    top: 2px;
-}
-
-.color-lightness {
-    width: 100%;
-    height: 100%;
-    position: relative;
-    border-radius: 100%;
-    aspect-ratio: 1 / 1;
-}
-
-.selector {
-    display: block;
-    width: 20px;
-    height: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    border-radius: 100%;
-    z-index: 1;
-    box-shadow: inset 0 0 3px .5px rgb(70, 70, 70), 0 0 5px 1px rgb(70, 70, 70);
-}
-
-#lightness-selector {
-    transform: translate(-50%, -50%);
-    border: 10px solid white;
-}
-
-#color-selector {
-    transform: translate(-50%, -50%);
-    border: 5px solid white;
-}
 
 #canvas {
     height: 100%;
     width: 100%;
     border-radius: 100%;
-    padding: 15px;
     background-color: white;
 }
+
+.example {
+    width: 500px;
+    height: 500px;
+    border-radius: 100%;
+    background: 
+  radial-gradient(circle at center 0,
+    red,
+    rgba(242,13,13,.8) 10%,
+    rgba(230,26,26,.6) 20%,
+    rgba(204,51,51,.4) 30%,
+    rgba(166,89,89,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+   radial-gradient(circle at 85.355% 14.645%,
+    #ffbf00,
+    rgba(242,185,13,.8) 10%,
+    rgba(230,179,26,.6) 20%,
+    rgba(204,166,51,.4) 30%,
+    rgba(166,147,89,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+   radial-gradient(circle at 100% 50%,
+    #80ff00,
+    rgba(128,242,13,.8) 10%,
+    rgba(128,230,26,.6) 20%,
+    rgba(128,204,51,.4) 30%,
+    rgba(128,166,89,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+  radial-gradient(circle at 85.355% 85.355%,
+    #00ff40,
+    rgba(13,242,70,.8) 10%,
+    rgba(26,230,77,.6) 20%,
+    rgba(51,204,89,.4) 30%,
+    rgba(89,166,108,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+  radial-gradient(circle at 50% 100%,
+    #0ff,
+    rgba(13,242,242,.8) 10%,
+    rgba(26,230,230,.6) 20%,
+    rgba(51,204,204,.4) 30%,
+    rgba(89,166,166,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+  radial-gradient(circle at 14.645% 85.355%,
+    #0040ff,
+    rgba(13,70,242,.8) 10%,
+    rgba(26,77,230,.6) 20%,
+    rgba(51,89,204,.4) 30%,
+    rgba(89,108,166,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+  radial-gradient(circle at 0 50%,
+    #8000ff,
+    rgba(128,13,242,.8) 10%,
+    rgba(128,26,230,.6) 20%,
+    rgba(128,51,204,.4) 30%,
+    rgba(128,89,166,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ),
+
+  radial-gradient(circle at 14.645% 14.645%,
+    #ff00bf,
+    rgba(242,13,185,.8) 10%,
+    rgba(230,26,179,.6) 20%,
+    rgba(204,51,166,.4) 30%,
+    rgba(166,89,147,.2) 40%,
+    hsla(0,0%,50%,0) 50%
+  ); 
+};
